# specfem2d

./: .azure-pipelines.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CITATION.cff  CONTRIBUTING.md  CUDA_VERSION_release_note  Database00000_left_edge_only  Database00000_right_edge_only  LICENSE  Makefile  Makefile.in  README  README.md  README_EXAMPLES  README_MANUAL.txt  README_POROELASTIC.txt  SEM_save_dir.py  TODO_list  add_attenuation_Manu_2D_one_day.tar.bz2  adj_seismogram.f90  assemble_MPI.F90  attenuation_compute_param.c  attenuation_model.f90  change_all_2D_Par_files.csh  check_mesh_quality_Gmsh.f90  check_quality_external_mesh.f90  check_stability.F90  checkgrid.F90  clean_a_Par_file.py  compute_Bielak_conditions.f90  compute_arrays_source.f90  compute_curl_one_element.f90  compute_elastic_energy.f90  compute_energy.f90  compute_forces_acoustic.f90  compute_forces_elastic.f90  compute_forces_fluid.f90  compute_forces_poro_fluid.f90  (+93 more)
.azure-pipelines/: configure-template.yml  test-template.yml
.travis/: run_build.sh  run_install.sh  run_tests.sh
Abel_Brest/: Par_file_Abel_Balanche_bathy_source_solid  SOURCE_Abel_Balanche_bathy_source_solid  process.sh
BENCHMARK_CLAERBOUT_ADJOINT/: README
CPML_absorbing_layers/: CPML_layers_added_to_simple_square_with_Gmsh.geo  how_to_add_CPML_layers_in_the_Gmsh_mesher.txt
DATA/: CMTSOLUTION  Par_file  Par_file.in  Par_file_Abel_Balanche_bathy_source_solid  Par_file_CercleMod50_50_10Hz_Paul  Par_file_M2_UPPA  Par_file_Paul_acoustic  Par_file_Paul_elastic  Par_file_Ronan_SV_30  Par_file_Thomas_Lacq  Par_file_acoustic_poroelastic  Par_file_benchmark_Hertzberg  Par_file_canyon  Par_file_cours_M2_UPPA  Par_file_no_canyon  Par_file_noise_1  Par_file_noise_2  Par_file_noise_3  Par_file_poroelastic  Par_file_unstruct  Par_file_unstruct_CARL  SOURCE  SOURCE.adj  STATIONS  STATIONS_canyon  decimate_mesh.f90
DATA_to_sort_older_examples/: Par_file_Abel_Balanche_bathy_source_solid  Par_file_Ronan_SV_30  Par_file_attenuation_2D  Par_file_canyon  SOURCE.adj  SOURCE_Ronan_SV_30  SOURCE_attenuation_2D
EXAMPLES/: README.md  README_EXAMPLES  change_something_in_all_the_Par_files_automatically.bash  process_DATA_Par_files_to_update_their_format_when_new_parameters_are_added.py  process_DATA_Par_files_to_update_their_parameters_from_a_main_file.py  process_DATA_Par_files_to_update_their_parameters_from_a_master.py  vi_all_2D_Par_files.csh  view_all_parameter_files_to_modify_them.bash  view_all_parameter_files_to_modify_them.csh  view_all_parameter_or_source_files_to_modify_them.bash
Gmsh_example_MPI/: Material_SqrCirc  Par_file_Gmsh_SqrCircles.in  SOURCE.SqrCirc  Surf_abs_SqrCirc
Gmsh_example_MPI_Stacey/: Nodes_SqrCirc  Par_file_Gmsh_SqrCircles.in  process_this_example.sh
Gmsh_example_Stacey_MPI/: Par_file_Gmsh_SqrCircles.in  SqrCirc.msh  run_this_example.sh
Gmsh_example_Stacey_serial/: Par_file_Gmsh_SqrCircles.in  SOURCE.SqrCirc
Gmsh_example_serial/: Par_file_Gmsh_SqrCircles.in  Surf_left_SqrCirc  mesh_quality_histogram.txt  plot_mesh_quality_histogram.gnu
Gmsh_example_serial_Stacey/: Mesh_SqrCirc  Par_file_Gmsh_SqrCircles.in  process_this_example.sh
INDUSTRIAL_FORMAT/: Par_file  SOURCE  interpolate.f90
LuoYang_fluid_soild_kernel/: README  SOURCE
LuoYang_fluid_solid_kernel/: Par_file  plot_kernel  process_kernel.sh  run_this_example.sh
M2_UPPA/: Par_file_M2_UPPA  README  process.sh
MAILLE90/: Makefile  Par  Par_Paul_elastic  Par_cours_M2_UPPA  Par_rouen_aniso_ok  Par_rouen_ok  circ.f90  maille.f90  maille_non_struct_2.f90  maille_non_struct_3.f90  maille_struct.f90  meshfem2D.f90
Rayleigh_wave/: README  SOURCE_Rayleigh_2D  process.sh
Rayleigh_wave_no_crack/: Par_file_Rayleigh_2D  process.sh
Rayleigh_wave_with_crack/: Par_file_Rayleigh_2D  README  run_this_example.sh
SEM_2D_Dimitri/: Makefile  README_MANUAL.txt  TODO_list  assemble_MPI.F90  attenuation_model.f90  checkgrid.F90  checkgrid.f90  circ.f90  compute_arrays_source.f90  compute_elastic_energy.f90  compute_energy.f90  compute_forces_acoustic.f90  compute_forces_elastic.f90  compute_gradient_attenuation.f90  compute_gradient_fluid.f90  compute_pressure.f90  compute_vector_field.f90  constants.h  convolve_source_timefunction.f90  create_color_image.f90  create_earth_model.f90  createnum_fast.f90  createnum_slow.f90  cree_image_PNM.f90  datim.f90  defarrays.f90  define_derivation_matrices.f90  define_external_model.f90  define_shape_functions.f90  enforce_acoustic_free_surface.f90  gll_library.f90  gmat01.f90  lagrange_poly.f90  locate_receivers.F90  locate_source_force.f90  locate_source_moment_tensor.F90  locate_source_moment_tensor.f90  meshfem2D.F90  meshfem2D.f90  numerical_recipes.f90  (+13 more)
SPECFEM90/: Makefile  calc_energie.f90  calcdivcurl.f90  calcforce.f90  checkgrid.f90  compute_gradient_attenuation.f90  constants.h  createnum_fast.f90  createnum_slow.f90  datim.f90  defarrays.f90  define_derivative_matrices.f90  dirac.f90  dircty.f90  endw1.f90  ezfftf.f90  gammaf.f90  getelspec.f90  getltf.f90  getspec.f90  gmat01.f90  hdgll.f90  hgll.f90  intseq.f90  jacobf.f90  lagrange_poly.f90  modifperio.f90  modules.f90  plotavs.f90  plotgll.f90  plotpost.f90  plotvect.f90  pndleg.f90  pnleg.f90  pnormj.f90  positrec.f90  positsource.f90  q49shape.f90  q49spec.f90  qinpspec.f90  (+8 more)
Tape2007/: Par_file_Tape2007_132rec  Par_file_Tape2007_132rec_checker  Par_file_Tape2007_onerec  README  SOURCE_001  SOURCE_002  SOURCE_003  SOURCE_004  SOURCE_005  SOURCE_006  SOURCE_007  SOURCE_008  SOURCE_009  SOURCE_010  SOURCE_011  SOURCE_012  SOURCE_013  SOURCE_014  SOURCE_015  SOURCE_016  SOURCE_017  SOURCE_018  SOURCE_019  SOURCE_020  SOURCE_021  SOURCE_022  SOURCE_023  SOURCE_024  SOURCE_025  process.sh  process_checker.sh  run_this_example.sh
Tape2007_kernel/: Par_file_Tape2007_onerec  README  SOURCE_001  adj_seismogram_Tape2007.f90  process.sh  run_this_example.sh
Tromp2005/: Par_file_Tromp2005  Par_file_Tromp2005_s100  README  SOURCE_Tromp2005  SOURCE_Tromp2005_s100  process.sh
Tromp2005_kernel/: Par_file_Tromp2005  README  SOURCE_Tromp2005  process.sh  (+2 more)
(+4432 files in other folders)
